# stupid_simple_dotenv

./: .env  CHANGELOG.md  Cargo.toml  LICENSE  README.md  other.env
.github/workflows/: rust-clippy.yml
examples/: usage.rs
src/: lib.rs
