[package]
name = "stupid_simple_dotenv"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A stupid simple dotenv parser"
repository = "https://github.com/Thomas-Zenkel/stupid_simple_dotenv"
keywords = ["dotenv", "settings", "configuration", "env", "environment"]
categories = ["config"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
